# zagHexa

./: .gitignore  How to install pygame   README.md  hexapodik.m  matlab simulation.docx
AndroidSensors_App/: README.md
AndroidSensors_App/SocketClient/: local.properties
Apks/: SensorSockets.apk  ZagHexa Robot.apk
ArduinoCode/tripod/: tripod.ino
Client_Server/: client.c  refrance links.txt  server2.c
Client_Server/ROS_node/: CMakeLists.txt  package.xml
Client_Server/ROS_node/src/: server2.cpp  server_node.cpp
Matlab/: ZagHexaLegModelIF.m  ZagHexaLegModelIK.m  calibration.m  clacHexaBodyIK.m  four_legged_robot_animation.m  hexapodfk.m  hexapodik.m  ik.m  one_leg_motion.m  testClacHexaBodyIK.m  zaghexa.m
Matlab/html/: ZagHexaLegModelIK.html  zaghexa.html
ROS/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROS/src/ClientServer/: CMakeLists.txt  package.xml
ROS/src/ClientServer/src/: client_node.cpp  server_node.cpp
ROS/src/ClientforApp/: CMakeLists.txt  package.xml
ROS/src/ClientforApp/src/: ClientApp.cpp  String_manipulation.cpp
ROS/src/ClientforApp/src/headers/: client_l.cpp  client_l.h
ZagHexaIKBluetooth/ZagHexaIK/: Speed.ino  ZagHexaIK.ino  normalMode.ino  transAndrotaZ.ino
ZagHexaIKWiFi/ZagHexaIK/: ZagHexaIK.ino  rotaXY.ino  transXY.ino
androidRobotBTjoystick/: README.md  androidrobotbtjoypad.apk  local.properties
androidRobotBTjoystick/app/: build.gradle
docs/: README.md  index.html  index1.html  try.html
docs/_layout/: default.html
docs/_layouts/: default.html  default2.html  layout.html
docs/about/: about.html  (+1 more)
(+114 files in other folders)
